fix(drawer): Content is overlapping the drawer in rtl (#502)

--- a/src/theme/extend/app-layout/mdc-layout.scss
+++ b/src/theme/extend/app-layout/mdc-layout.scss
@@ -7,7 +7,7 @@
   z-index: 0;
 
   .mdc-permanent-drawer--fixed + & {
-    margin-left: $mdc-permanent-drawer-width;
+    @include mdc-rtl-reflexive-box(margin, left, $mdc-permanent-drawer-width);
   }
 
   // If the drawer is collapsed, which needs to be the element directly before
